--- a/Forum/Pages/PwReset.razor
+++ b/Forum/Pages/PwReset.razor
@@ -1,29 +1,31 @@
 ﻿@page "/pwreset/{Token?}"
 @using Microsoft.EntityFrameworkCore
-@inject NavigationManager NavMan;
-@inject IDbContextFactory<Model.Database> DbContext;
+@inject NavigationManager NavMan
+@inject IDbContextFactory<Model.Database> DbContext
+@inject NavigationManager NavMan 
 
 @if (string.IsNullOrEmpty(Token))
 {
-	<div class="main text-center mt-5 ml-auto mr-auto">
+	<div class="main text-center mt-5 ml-auto mr-auto form-sim">
 		<div class="col">
 			<h3 class="mt-2">Request Password Reset</h3>
 			<input class="form-control" @bind-value="_email" type="text" placeholder="Email" />
 			<div class="row">
-				<button class="accent-green btn-bottom-left btn-bottom-right" @onclick="ProcessRequest">Request reset Link</button>
+				<button class="accent-blue btn-bottom-left btn-grow-medium" @onclick="NavLogin">Go to Login</button>
+				<button class="accent-green btn-bottom-right" @onclick="ProcessRequest">Request Reset Link</button>
 			</div>
 		</div>
 	</div>
 }
 else
 {
-	<div class="main text-center mt-5 ml-auto mr-auto">
+	<div class="main text-center mt-5 ml-auto mr-auto form-sim">
 		<div class="col">
 			<h3 class="mt-2">Update Password</h3>
 			<input class="form-control" @bind-value="_newPassword" type="password" placeholder="New Password" />
 			<input class="form-control" @bind-value="_repNewPassword" type="password" placeholder="Repeat New Password" />
 			<div class="row">
-				<button class="accent-green btn-bottom-left btn-bottom-right" @onclick="UpdatePassword">Save Password"</button>
+				<button class="accent-green btn-bottom-left btn-bottom-right" @onclick="UpdatePassword">Save Password</button>
 			</div>
 		</div>
 	</div>
@@ -85,6 +87,11 @@ else
 
 		pwReset.Used = true;
 		await db.SaveChangesAsync();
+	}
+
+	private void NavLogin()
+	{
+		NavMan.NavigateTo("/login");
 	}
 }
 
