--- a/Forum/wwwroot/css/site.css
+++ b/Forum/wwwroot/css/site.css
@@ -4,6 +4,10 @@ html, body {
 	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	background: #191B22;
 	color: #FFF;
+
+	/* Makes sure the page is always centered,
+	 * also on an ultra-wide screen.
+	 */
 	max-width: 125rem;
 	margin-left: auto;
 	margin-right: auto;
@@ -58,10 +62,14 @@ form {
 	width: 30em;
 }
 
+.form-bigger {
+	width: 50rem;
+}
+
 .main {
 	background: #333844;
 	color: #9BAEC8;
-	margin: 5px;
+	margin: 0.25em;
 }
 
 	.main h3 {
@@ -70,16 +78,16 @@ form {
 
 .second {
 	background: #191B22;
-	margin: 5px;
+	margin: 0.25em;
 }
 
 .needs-padding {
-	padding: 10px;
+	padding: 0.5em;
 }
 
 .needs-space-lr {
-	margin-left: 15px !important;
-	margin-right: 15px !important;
+	margin-left: 0.75em !important;
+	margin-right: 0.75em !important;
 }
 
 .clickable {
@@ -108,14 +116,27 @@ form {
 button {
 	border: none;
 	display: inline-block;
-	padding: 7px;
-	width: 1%;
+	padding: 0.5em;
+	
+	/* Divides the whole available width between
+	 * all buttons equally.
+	 */
+	width: 0;
 	flex-grow: 1;
 }
 
 	button:hover {
 		filter: brightness(120%);
+		letter-spacing: 1px;
 	}
+
+.btn-grow-medium {
+	flex-grow: 1.5 !important;
+}
+
+.btn-grow-large {
+	flex-grow: 2 !important;
+}
 
 .btn-norm {
 	border-radius: 0.5rem;
@@ -184,7 +205,7 @@ button {
 	border: none;
 	background: #333844;
 	color: #9BAEC8;
-	margin: 5px;
+	margin: 0.25em;
 	width: 100%;
 	border-radius: 0.5rem;
 }
@@ -198,6 +219,46 @@ button {
 .shiny:hover {
 	filter: brightness(120%);
 }
+
+textarea {
+	margin-bottom: 0 !important;
+}
+
+.form-control:disabled {
+	background: #333844;
+	color: #FFF;
+	filter: brightness(80%);
+}
+
+.btn-select {
+	width: inherit;
+	height: 30px;
+	margin: 0.25rem auto 0.25rem auto;
+}
+
+	.btn-select button {
+		background: #444954;
+		color: #FFF;
+		width: 0;
+		flex-grow: 1;
+		height: inherit;
+		padding: 0;
+	}
+
+	.btn-select .btn-active {
+		background: #778393;
+	}
+
+.btn-left {
+	border-bottom-left-radius: 0.25em;
+	border-top-left-radius: 0.25em;
+}
+
+.btn-right {
+	border-bottom-right-radius: 0.25em;
+	border-top-right-radius: 0.25em;
+}
+
 
 
 
