--- a/Forum/Pages/Thread.razor
+++ b/Forum/Pages/Thread.razor
@@ -1,4 +1,4 @@
-﻿@page "/thread/{Id:int?}"
+﻿@page "/thread/{Id:int}"
 @attribute [Authorize]
 @using Microsoft.EntityFrameworkCore
 @using System.IO
