Updated font and colors.

--- a/Forum/Pages/_Host.cshtml
+++ b/Forum/Pages/_Host.cshtml
@@ -15,6 +15,7 @@
 	<link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
 	<link href="css/site.css" rel="stylesheet" />
 	<link href="Forum.styles.css" rel="stylesheet" />
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&subset=latin-ext" rel="stylesheet" type="text/css">
 </head>
 <body>
     @*Prerendering needs to be disabled for Session Handling to work.*@
